# ChangeLog for dev-lisp/ecls
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lisp/ecls/ChangeLog,v 1.46 2013/05/29 13:24:25 grozin Exp $

*ecls-13.5.1 (29 May 2013)
*ecls-12.12.1-r5 (29 May 2013)

  29 May 2013; Andrey Grozin <grozin@gentoo.org> -ecls-12.12.1-r4.ebuild,
  +ecls-12.12.1-r5.ebuild, +ecls-13.5.1.ebuild, +files/12.12.1-asdf.patch,
  +files/13.5.1-headers-gentoo.patch:
  Version bump; fixing #471364 and #468308 in 12.12.1

*ecls-12.12.1-r4 (20 Apr 2013)

  20 Apr 2013; Andrey Grozin <grozin@gentoo.org> +ecls-12.12.1-r4.ebuild:
  Version bump from the lisp overlay (pmasked)

*ecls-12.12.1 (14 Dec 2012)

  14 Dec 2012; Andrey Grozin <grozin@gentoo.org>
  +files/12.12.1-headers-gentoo.patch, +ecls-12.12.1.ebuild:
  Version bump

  23 Aug 2012; Christoph Junghans <ottxor@gentoo.org> ecls-12.7.1.ebuild:
  added prefix keywords (bug #341985)

*ecls-12.7.1 (05 Aug 2012)

  05 Aug 2012; Andrey Grozin <grozin@gentoo.org>
  +files/12.7.1-headers-gentoo.patch, +ecls-12.7.1.ebuild:
  Version bump

*ecls-12.2.1 (11 Feb 2012)

  11 Feb 2012; Andrey Grozin <grozin@gentoo.org>
  +files/12.2.1-headers-gentoo.patch, -files/10.2.1-headers-gentoo.patch,
  -ecls-10.2.1.ebuild, +ecls-12.2.1.ebuild:
  Version bump

  07 Mar 2011; Ulrich Mueller <ulm@gentoo.org> ecls-11.1.1-r1.ebuild:
  Avoid autodetection of the etags program. Make sure that with USE=emacs,
  etags from Emacs is used, fixes bug 357319. Thanks to François Bissey and
  Steven Trogdon.

*ecls-11.1.1-r1 (04 Mar 2011)

  04 Mar 2011; Andrey Grozin <grozin@gentoo.org> +files/11.1.1-cmploc.patch,
  -ecls-11.1.1.ebuild, +ecls-11.1.1-r1.ebuild:
  Fixed #357315, thanks to Francois Bissey <fbissey@slingshot.co.nz> for
  cherry-pick the patches

*ecls-11.1.1 (17 Jan 2011)

  17 Jan 2011; Andrey Grozin <grozin@gentoo.org>
  +files/11.1.1-headers-gentoo.patch, +ecls-11.1.1.ebuild:
  Version bump

  17 Dec 2010; Ulrich Mueller <ulm@gentoo.org> ecls-9.12.3.ebuild,