@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/ecls/ecls-13.5.1.ebuild,v 1.1 2013/05/29 13:24:25 grozin Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/ecls/ecls-13.5.1.ebuild,v 1.2 2013/07/02 04:14:08 grozin Exp $
 
 EAPI=5
 inherit eutils multilib
@@ -10,7 +10,6 @@ MY_P=ecl-${PV}
 DESCRIPTION="ECL is an embeddable Common Lisp implementation."
 HOMEPAGE="http://ecls.sourceforge.net/"
 SRC_URI="mirror://sourceforge/${PN}/${MY_P}.tgz"
-RESTRICT="mirror"
 
 LICENSE="BSD LGPL-2"
 SLOT="0/${PV}"
