@@ -1,31 +1,0 @@
-# Copyright 1999-2010 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ultraviolet/ultraviolet-0.10.2-r1.ebuild,v 1.1 2010/07/11 20:27:32 graaff Exp $
-
-EAPI=2
-USE_RUBY="ruby18"
-
-RUBY_FAKEGEM_TASK_DOC="docs"
-RUBY_FAKEGEM_DOCDIR="doc"
-
-RUBY_FAKEGEM_EXTRADOC="History.txt README.txt"
-RUBY_FAKEGEM_EXTRAINSTALL="render syntax"
-
-inherit ruby-fakegem
-
-DESCRIPTION="A syntax highlighting engine based on Textpow"
-HOMEPAGE="http://ultraviolet.rubyforge.org/"
-
-LICENSE="MIT"
-SLOT="0"
-KEYWORDS="~amd64 ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris"
-IUSE=""
-
-ruby_add_bdepend "doc? ( dev-ruby/hoe )"
-ruby_add_bdepend "test? ( dev-ruby/hoe virtual/ruby-test-unit )"
-
-ruby_add_rdepend ">=dev-ruby/textpow-0.10.0"
-
-all_ruby_prepare() {
-	sed -i -e '/rdoc_patter/d' Rakefile || die
-}
