@@ -1,27 +1,0 @@
-# Copyright 1999-2012 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/will_paginate/will_paginate-3.0.3.ebuild,v 1.1 2012/09/24 14:44:21 graaff Exp $
-
-EAPI=4
-USE_RUBY="ruby18 ree18 ruby19"
-
-RUBY_FAKEGEM_RECIPE_TEST="rspec"
-
-RUBY_FAKEGEM_TASK_DOC=""
-RUBY_FAKEGEM_EXTRADOC="README.md"
-
-inherit ruby-fakegem
-
-DESCRIPTION="Most awesome pagination solution for Ruby."
-HOMEPAGE="http://github.com/mislav/will_paginate/"
-
-LICENSE="MIT"
-SLOT="3"
-KEYWORDS="~amd64 ~x86 ~x86-macos"
-IUSE=""
-
-ruby_add_bdepend "
-	test? (
-		=dev-ruby/rails-3*
-		dev-ruby/mocha
-	)"
