@@ -7,8 +7,7 @@ IUSE=debug emacs gengc precisegc sse +threads +unicode X
 KEYWORDS=~amd64 ~ppc ~sparc ~x86
 LICENSE=BSD LGPL-2
 RDEPEND=dev-libs/gmp virtual/libffi >=dev-libs/boehm-gc-7.1[threads?] >=dev-lisp/asdf-2.33-r3:=
-RESTRICT=mirror
 SLOT=0/13.5.1
 SRC_URI=mirror://sourceforge/ecls/ecl-13.5.1.tgz
 _eclasses_=eutils	63afaaed8aa819fdcb814c7cd39495a2	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=0740860adc461dae4d490fe89ecdd32e
+_md5_=806b7ecac668ca0ccef02b690722aa7d
