@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile configure install prepare setup test unpack
-DEPEND=ruby_targets_ruby18? ( doc? ( dev-ruby/hoe[ruby_targets_ruby18] ) ) ruby_targets_ruby18? ( test? ( dev-ruby/hoe[ruby_targets_ruby18] virtual/ruby-test-unit[ruby_targets_ruby18] ) ) test? ( ruby_targets_ruby18? ( >=dev-ruby/textpow-0.10.0[ruby_targets_ruby18] ) ) ruby_targets_ruby18? ( dev-lang/ruby:1.8 ) ruby_targets_ruby18? ( doc? ( dev-ruby/rake[ruby_targets_ruby18] ) ) ruby_targets_ruby18? ( test? ( dev-ruby/rake[ruby_targets_ruby18] ) ) ruby_targets_ruby18? ( virtual/rubygems[ruby_targets_ruby18] ) test? ( ruby_targets_ruby18? ( virtual/rubygems[ruby_targets_ruby18] ) )
-DESCRIPTION=A syntax highlighting engine based on Textpow
-EAPI=2
-HOMEPAGE=http://ultraviolet.rubyforge.org/
-IUSE=test elibc_FreeBSD ruby_targets_ruby18 doc test test
-KEYWORDS=~amd64 ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris
-LICENSE=MIT
-RDEPEND=ruby_targets_ruby18? ( >=dev-ruby/textpow-0.10.0[ruby_targets_ruby18] ) ruby_targets_ruby18? ( dev-lang/ruby:1.8 ) ruby_targets_ruby18? ( virtual/rubygems[ruby_targets_ruby18] )
-SLOT=0
-SRC_URI=mirror://rubygems/ultraviolet-0.10.2.gem
-_eclasses_=eutils	63afaaed8aa819fdcb814c7cd39495a2	java-utils-2	52b7cfbf4f7225fcea7e7f18b6d83328	multilib	892e597faee02a5b94eb02ab512e7622	ruby-fakegem	6e366daedf25d7020291916549562bbf	ruby-ng	69c01a1b984ed066bc91b4397b002f6a	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
-_md5_=7c2c672eb0bcc20f591a5ea53b2c4168
