@@ -1,14 +1,0 @@
-DEFINED_PHASES=compile configure install prepare setup test unpack
-DEPEND=ruby_targets_ruby18? ( test? ( =dev-ruby/rails-3*[ruby_targets_ruby18] dev-ruby/mocha[ruby_targets_ruby18] ) ) ruby_targets_ree18? ( test? ( =dev-ruby/rails-3*[ruby_targets_ree18] dev-ruby/mocha[ruby_targets_ree18] ) ) ruby_targets_ruby19? ( test? ( =dev-ruby/rails-3*[ruby_targets_ruby19] dev-ruby/mocha[ruby_targets_ruby19] ) ) ruby_targets_ruby18? ( dev-lang/ruby:1.8 ) ruby_targets_ree18? ( dev-lang/ruby-enterprise:1.8 ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby18? ( test? ( dev-ruby/rspec:2[ruby_targets_ruby18] ) ) ruby_targets_ree18? ( test? ( dev-ruby/rspec:2[ruby_targets_ree18] ) ) ruby_targets_ruby19? ( test? ( dev-ruby/rspec:2[ruby_targets_ruby19] ) ) ruby_targets_ruby18? ( virtual/rubygems[ruby_targets_ruby18] ) ruby_targets_ree18? ( virtual/rubygems[ruby_targets_ree18] ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) test? ( ruby_targets_ruby18? ( virtual/rubygems[ruby_targets_ruby18] ) ruby_targets_ree18? ( virtual/rubygems[ruby_targets_ree18] ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) )
-DESCRIPTION=Most awesome pagination solution for Ruby.
-EAPI=4
-HOMEPAGE=http://github.com/mislav/will_paginate/
-IUSE=elibc_FreeBSD ruby_targets_ruby18 ruby_targets_ree18 ruby_targets_ruby19 test test
-KEYWORDS=~amd64 ~x86 ~x86-macos
-LICENSE=MIT
-RDEPEND=ruby_targets_ruby18? ( dev-lang/ruby:1.8 ) ruby_targets_ree18? ( dev-lang/ruby-enterprise:1.8 ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby18? ( virtual/rubygems[ruby_targets_ruby18] ) ruby_targets_ree18? ( virtual/rubygems[ruby_targets_ree18] ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] )
-REQUIRED_USE=|| ( ruby_targets_ruby18 ruby_targets_ree18 ruby_targets_ruby19 )
-SLOT=3
-SRC_URI=mirror://rubygems/will_paginate-3.0.3.gem
-_eclasses_=eutils	63afaaed8aa819fdcb814c7cd39495a2	java-utils-2	52b7cfbf4f7225fcea7e7f18b6d83328	multilib	892e597faee02a5b94eb02ab512e7622	ruby-fakegem	6e366daedf25d7020291916549562bbf	ruby-ng	69c01a1b984ed066bc91b4397b002f6a	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
-_md5_=b903e6a2a1dabc335411b3e4a37cb3a9
