@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/will_paginate
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/will_paginate/ChangeLog,v 1.19 2013/01/19 07:45:25 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/will_paginate/ChangeLog,v 1.20 2013/07/02 05:55:13 graaff Exp $
+
+  02 Jul 2013; Hans de Graaff <graaff@gentoo.org> -will_paginate-3.0.3.ebuild:
+  Cleanup.
 
 *will_paginate-3.0.4 (19 Jan 2013)
 
