@@ -1,6 +1,9 @@
 # ChangeLog for dev-lisp/ecls
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/ecls/ChangeLog,v 1.46 2013/05/29 13:24:25 grozin Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/ecls/ChangeLog,v 1.47 2013/07/02 04:14:08 grozin Exp $
+
+  02 Jul 2013; Andrey Grozin <grozin@gentoo.org> ecls-13.5.1.ebuild:
+  A typo fixed
 
 *ecls-13.5.1 (29 May 2013)
 *ecls-12.12.1-r5 (29 May 2013)
